tests/dataset/tpc-ds/compiler/go/q94.error
go run error: exit status 1
# command-line-arguments
/tmp/TestGoCompiler_TPCDSq941446778209/001/main.go:121:3: undefined: Order_count
/tmp/TestGoCompiler_TPCDSq941446778209/001/main.go:122:3: undefined: Total_shipping_cost
/tmp/TestGoCompiler_TPCDSq941446778209/001/main.go:123:3: undefined: Total_net_profit
/tmp/TestGoCompiler_TPCDSq941446778209/001/main.go:241:3: undefined: Order_count
/tmp/TestGoCompiler_TPCDSq941446778209/001/main.go:248:3: undefined: Total_shipping_cost
/tmp/TestGoCompiler_TPCDSq941446778209/001/main.go:255:3: undefined: Total_net_profit
